remove dependencies on anything except Make and Docker

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Arla • TodoMVC</title>
-    <link rel="stylesheet" href="todomvc-common/base.css">
+    <title>Arla App</title>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/app.bundle.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
